--- a/instagram.html
+++ b/instagram.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.png" alt="instagram">
-    <a href="https://www.instagram.com/nascimento_kawan/" target="_blank">Acesse</a>
+    <a href="https://www.instagram.com/reenaato_alves/tagged/" target="_blank">Acesse</a>
 </body>
 </html>
